syntax = "proto3";

option csharp_namespace = "APMData";

package APMData;

import "google/protobuf/Empty.proto";

service DiskInfoService {
	rpc EnumerateDisks (google.protobuf.Empty) returns (DisksReply);
}

service APMService {
	rpc GetCurrentAPM (CurrentAPMRequest) returns (CurrentAPMReply);
	rpc SetAPM (APMRequest) returns (APMReply);
}

service PowerStateService {
	rpc GetPowerState (google.protobuf.Empty) returns (PowerStateReply);
}

service ConfigurationService {
	rpc GetDriveAPMConfiguration (google.protobuf.Empty) returns (DriveAPMConfigurationReply);
	rpc ResetDriveAPMConfiguration (ResetDriveRequest) returns (ResetDriveReply);
}

message DiskInfoEntry {
	uint32 Index			= 1;
	uint32 Availability		= 2;
	string Caption			= 3;
	string Description		= 4;
	string DeviceID			= 5;
	string InterfaceType	= 6;
	string Manufacturer		= 7;
	string Model			= 8;
	string SerialNumber		= 9;
}

// ReplyResult нужно понимать как тип WINDOWS BOOL - 0 - ложь, иначе - истина
message DisksReply {
	int32 ReplyResult						= 1;
	repeated DiskInfoEntry DiskInfoEntries	= 2;
}

message CurrentAPMRequest {
	string DeviceID = 1;
}

message CurrentAPMReply {
	int32 ReplyResult			= 1;
	uint32 APMValue				= 2;
	EPowerSource PowerSource	= 3;
}

message APMRequest {
	string DeviceID				= 1;
	uint32 APMValue				= 2;
	EPowerSource PowerSource	= 3;
}

message APMReply {
	int32 ReplyResult = 1;
}

enum EBatteryFlag {
	None				= 0;
	High				= 1;
	Low					= 2;
	Critical			= 4;
	Charging			= 8;
	NoSystemBattery		= 128;
	BatteryFlagUnknown	= 255;
}

enum EPowerSource {
	Unknown		= 0;
	Mains		= 1;
	Battery		= 2;
}

message PowerStateReply {
	int32 ReplyResult			= 1;
	PowerStateEntry PowerState	= 2;
}

message PowerStateEntry {
	EPowerSource PowerSource	= 1;
	EBatteryFlag BatteryFlag	= 2;
	int32 BatteryLifePercent	= 3;
	int32 BatteryLifeTime		= 4;
	int32 BatteryFullLifeTime	= 5;
}

message DriveAPMConfigurationReplyEntry {
	string DeviceID		= 1;
	uint32 OnMains		= 2;
	uint32 OnBatteries	= 3;
}

message DriveAPMConfigurationReply {
	int32 ReplyResult															= 1;
	repeated DriveAPMConfigurationReplyEntry DriveAPMConfigurationReplyEntries	= 2;
}

message ResetDriveRequest {
	string DeviceID				= 1;
	EPowerSource PowerSource	= 2;
}

message ResetDriveReply {
	int32 ReplyResult	= 1;
}